# ffi

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  ffi.h  package.json  pubspec.yaml  test.dart  upgrade.sh
dart_sdk/: trampoline.c
lib/: Ffi.dart  So.dart  blake3.dart  ed25519.dart  rmw.dart
src/: blake3.rs  dart.rs  dart_sdk.rs  ed25519.rs  into.rs  lib.rs  x25519.rs
