#cargo-features = ["edition2021"]

[package]
name = "dart-ffi"
authors = [ "rmw <i@rmw.link>" ]
#edition = "2021"
edition = "2018"
version = "0.0.1"
license = "AGPL-3.0-or-later"
description="placeholder ; writing"

[dependencies]
blake3 = "1.0.0"
ed25519-dalek-blake3 = "1.0.4"
rand = "0.8.4"
safer-ffi = { version = "0.0.6", features = ["proc_macros"] }
x25519-dalek = "1.1.1"

[lib]
crate-type = ["cdylib","staticlib"]

[features]
c-headers = ["safer-ffi/headers"]

